# god-of-skills

./: AGENTS.md  README.md
projects/pigmeu-never-forget/: .gitignore  AGENTS.md  README-agents.md  README.md  pyproject.toml
projects/pigmeu-never-forget/assets/brand/: README-brand.md
projects/pigmeu-never-forget/docs/: api-contracts.md  arquitetura.md  codex-pipeline.md  data-model.md  http-local.md  implementation-status.md  job-lifecycle.md  mcp-local.md  opencode-setup.md  skill-pigmeu-copilot-ops.md
projects/pigmeu-never-forget/docs/adr/: 001-qdrant-sqlite-faiss.md  002-summary-first-retrieval.md  003-autodream-like-consolidation.md
projects/pigmeu-never-forget/docs/diagrams/: fluxo-funcionalidades.mmd
projects/pigmeu-never-forget/docs/memories/sessions/: README.md
projects/pigmeu-never-forget/src/pigmeu_never_forget/: __init__.py  app.py  cli.py
projects/pigmeu-never-forget/src/pigmeu_never_forget/config/: defaults.py  loader.py
projects/pigmeu-never-forget/src/pigmeu_never_forget/domain/: enums.py  errors.py  models.py
projects/pigmeu-never-forget/src/pigmeu_never_forget/http/: __init__.py  api.py  server.py
projects/pigmeu-never-forget/src/pigmeu_never_forget/mcp/: __init__.py  __main__.py  adapter.py  contracts.py  local_call.py  (+1 more)
projects/pigmeu-never-forget/tests/: test_cli_mcp.py  test_config_loader.py  test_http_api.py  test_ingestion_incremental.py  test_jobs.py  test_mcp_adapter.py  test_mcp_contracts.py  test_runtime_services.py  test_session_memory.py  test_stage3_indexing.py  test_vector_store_qdrant.py  test_workspace_bootstrap.py
(+123 files in other folders)
